logs/Slang/generated/hdlconv/hdlconvertor_p701.sv.log
name: hdlconvertor_p701
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p701.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p701.sv:1:24: error: language feature not yet supported
module renamed_concat (.a({b,c}), f, .g(h[1]));
                       ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p701.sv:1:35: error: port 'f' has no I/O member declaration
module renamed_concat (.a({b,c}), f, .g(h[1]));
                                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p701.sv:1:38: error: language feature not yet supported
module renamed_concat (.a({b,c}), f, .g(h[1]));
                                     ^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p701.sv:8:25: error: language feature not yet supported
module mixed_direction (.p({a, e}));
                        ^~~~~~~~~~
